<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/edModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/edEngine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/engine"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/edTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/transmission"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/edPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/price"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/bDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/done"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/audia4"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/bNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/next_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>